Added site.css and modified navigation panel

--- a/app/index.html
+++ b/app/index.html
@@ -28,15 +28,19 @@
             <div class="navbar navbar-default" id="menu">
                 <div class="navbar-header">
                     <button class="btn btn-success navbar-toggle"></button>
-                    <div id="logo">
-                        <h4>Explore Foursquare</h4>
+                    <div id="logo" class=''>
+                        <h4>Project Development</h4>
                     </div>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#/explore">Explore</a></li>
-                        <li><a href="#/places">My Places</a></li>
-                        <li><a href="#/about">About</a></li>
+                        <li><a href="#/explore">Discussion</a></li>
+                        <li><a href="#/places">Use Cases</a></li>
+                        <li><a href="#/about">Team</a></li>
+                        <li><a href="#/explore">Issues</a></li>
+                        <li><a href="#/places">Timeline</a></li>
+                        <li><a href="#/about">Wireframes</a></li>
+                        <li><a href="#/about">Search</a></li>
                     </ul>
                 </div>
             </div>
@@ -48,9 +52,7 @@
         <hr />
  
         <footer class="container">
-            Created by Taiseer Joudeh. Twitter: <a href="http://twitter.com/tjoudeh" target="_blank">@tjoudeh</a>
- 
-            Taiseer Joudeh Blog: <a href="http://www.bitoftech.net" target="_blank">bitoftech.net</a>
+            
         </footer>
     </div>
 
