Added components of template for all the pages of the project management app

--- a/app/index.html
+++ b/app/index.html
@@ -36,11 +36,11 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#/explore">Discussion</a></li>
-                        <li><a href="#/places">Use Cases</a></li>
-                        <li><a href="#/about">Team</a></li>
-                        <li><a href="#/explore">Issues</a></li>
-                        <li><a href="#/places">Timeline</a></li>
-                        <li><a href="#/about">Wireframes</a></li>
+                        <li><a href="#/UseCases">Use Cases</a></li>
+                        <li><a href="#/Team">Team</a></li>
+                        <li><a href="#/Issues">Issues</a></li>
+                        <li><a href="#/Timeline">Timeline</a></li>
+                        <li><a href="#/Wireframes">Wireframes</a></li>
                         <li><a href="#/about">Search</a></li>
                     </ul>
                 </div>
@@ -69,8 +69,12 @@
 
 <!-- Load controllers -->
   <script type="text/javascript" src="controllers/discussionController.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
+  <script type="text/javascript" src="controllers/UseCasesController.js"></script>
+  <script type="text/javascript" src="controllers/TeamController.js"></script>
+  <script type="text/javascript" src="controllers/IssuesController.js"></script>
+  <script type="text/javascript" src="controllers/TimelineController.js"></script>
+  <script type="text/javascript" src="controllers/WireframesController.js"></script>
+  
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
@@ -86,6 +90,6 @@
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-animate.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.9.0/ui-bootstrap.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.9.0/ui-bootstrap-tpls.min.js"></script>
-<script type="text/javascript" src="content/js/toaster.js"></script>
-<script type="text/javascript" src="conent/js/loading-bar.min.js"></script>
+<!--<script type="text/javascript" src="content/js/toaster.js"></script> -->
+<script type="text/javascript" src="content/js/loading-bar.min.js"></script>
 
